syntax = "proto3";

package worker.proxy.v1;
option go_package = "github.com/hashicorp/boundary/internal/proxy;proxy";

message ClientHandshake {
    string tofu_token = 10;
}

message HandshakeResult {
}